--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM</title>
+    <title>About us</title>
     <link rel="stylesheet" href="../main.css">
 </head>
 
 <body>
     <header>
-        <a href="../">Home</a>
-        <a href="../products/">Products</a>
-        <a href="../about-us/">About us</a>
-        <a href="../contact/">Contact</a>
-        <a href="../pokemonai/index.html">Pokemonai</a>
+       <a href="../">Home</a>
+            <a href="../products/">Products</a>
+            <a href="../about-us/">About us</a>
+            <a href="../contact/">Contact</a>
+            <a href="../pokemonai/index.html">Pokemonai</a>
     </header>
 
     <h1 id="title">Zuikio Puikio daržas</h1>
