--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <header>
         <nav>
-            <a href="../">Home</a>
-            <a href="../products/">Products</a>
-            <a href="../about-us/">About us</a>
-            <a href="../contact/">Contact</a>
-            <a href="../pokemonai/index.html">Pokemonai</a>
+            <a href="./">Home</a>
+            <a href="./products/">Products</a>
+            <a href="./about-us/">About us</a>
+            <a href="./contact/">Contact</a>
+            <a href="./pokemonai/index.html">Pokemonai</a>
         </nav>
     </header>
 
