--- a/about-us/index.html
+++ b/about-us/index.html
@@ -10,11 +10,10 @@
 
 <body>
     <header>
-       <a href="../">Home</a>
-            <a href="../products/">Products</a>
-            <a href="../about-us/">About us</a>
-            <a href="../contact/">Contact</a>
-            <a href="../pokemonai/index.html">Pokemonai</a>
+        <a href="../products/index.html">Products</a>
+        <a href="../about-us/index.html">About us</a>
+        <a href="../contact/index.html">Contact</a>
+        <a href="../pokemonai/index.html">Pokemonai</a>
     </header>
 
     <h1 id="title">Zuikio Puikio daržas</h1>
