--- a/contact/index.html
+++ b/contact/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="../">Home</a>
+            <a href="../products/index.html">Products</a>
+            <a href="../about-us/index.html">About us</a>
+            <a href="../contact/index.html">Contact</a>
+            <a href="../pokemonai/index.html">Pokemonai</a>
+        </nav>
+    </header>
     <div id="initial_element"></div>
    
     <script src="./contact.js"></script>
