--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 
 <body>
+
+    
     <!-- JS: socials -->
 
     <header>
         <nav>
             <a href="./">Home</a>
-            <a href="./products/">Products</a>
-            <a href="./about-us/">About us</a>
-            <a href="./contact/">Contact</a>
+            <a href="./products/index.html">Products</a>
+            <a href="./about-us/index.html">About us</a>
+            <a href="./contact/index.html">Contact</a>
             <a href="./pokemonai/index.html">Pokemonai</a>
         </nav>
     </header>
