--- a/pokemonai/index.html
+++ b/pokemonai/index.html
@@ -9,9 +9,9 @@
 
 <header>
     <a href="../">Home</a>
-    <a href="../products/">Products</a>
-    <a href="../about-us/">About us</a>
-    <a href="../contact/">Contact</a>
+    <a href="../products/index.html">Products</a>
+    <a href="../about-us/index.html">About us</a>
+    <a href="../contact/index.html">Contact</a>
     <a href="../pokemonai/index.html">Pokemonai</a>
 </header>
 
