--- a/about-us/index.html
+++ b/about-us/index.html
@@ -14,6 +14,8 @@
         <a href="../about-us/index.html">About us</a>
         <a href="../contact/index.html">Contact</a>
         <a href="../pokemonai/index.html">Pokemonai</a>
+        <a href="../cars-sell/index.html">CarAI</a>
+        
     </header>
 
     <h1 id="title">Zuikio Puikio daržas</h1>
