--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="./about-us/index.html">About us</a>
             <a href="./contact/index.html">Contact</a>
             <a href="./pokemonai/index.html">Pokemonai</a>
+            <a href="../cars-sell/index.html">CarAI</a>
         </nav>
     </header>
 
