--- a/pokemonai/index.html
+++ b/pokemonai/index.html
@@ -13,6 +13,7 @@
     <a href="../about-us/index.html">About us</a>
     <a href="../contact/index.html">Contact</a>
     <a href="../pokemonai/index.html">Pokemonai</a>
+    <a href="../cars-sell/index.html">CarAI</a>
 </header>
 
 <body>
